[package]
name = "rusty_rockets"
version = "0.1.0"
authors = ["Daniel Mancebo <dani.mancebo_3@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
vector2d = "2.2.0"
indicatif = "0.12.0"

[dependencies.sdl2]
version = "0.32"
default-features = false
features = ["image"]
