[package]
name = "rusty_rockets"
version = "0.2.0"
authors = ["Daniel Mancebo <daniel.m.aldea@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
vector2d = "2.2.0"
indicatif = "0.12.0"
sdl2 = "0.34.0"
